scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest15c.scr
module bad.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest15c;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto2(role A, role B) @"<x:=3> x=3"  // Unsat if validated as root 
{
	2(y:int) from B to A;  @"(x>3)"
}
//*/
